# Ziro

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  package-lock.json  package.json
.github/workflows/: deploy-web.yml  release.yml
assets/: OneDark.tmTheme  ZiroDark.tmTheme
src/: app.rs  cursor.rs  debug.rs  document.rs  main.rs  mode.rs  syntax.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/editor/: cursor.rs  document.rs  explorer.rs  mod.rs  syntax.rs
src/lsp/: client.rs  messages.rs  mod.rs  protocol.rs  registry.rs
src/management/: history_management.rs  input_management.rs  mod.rs  selection_management.rs  tab_management.rs
src/management/input_management/: handle_key.rs  handle_mouse.rs  input_management.rs  mod.rs
src/ui/: colors.rs  lsp.rs  mod.rs  ui.rs  utils.rs
src/ui/parts/: components.rs  editor.rs  mod.rs  popups.rs  tabs.rs
web/: README.md  install-rolling.sh  package-lock.json  package.json  svelte.config.js
web/src/: app.html
web/src/lib/actions/: reveal.ts
web/src/lib/components/: Callout.svelte  Codeblock.svelte  Docstable.svelte  Footer.svelte  Goals.svelte  Hero.svelte  Install.svelte  Nav.svelte  Stack.svelte  Why.svelte
web/src/routes/: +layout.svelte  +page.svelte  layout.css
web/src/routes/docs/: +page.svelte
web/static/: install.sh
