[package]
name = "ziro"
version = "3.3.2"
description = "The better text editor"
authors = ["Faizeen Hoque <me@faizeenhoque.dev>"]
license = "MIT"
edition = "2024"
default-run = "ziro"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
